style.css
/* ... */
.nav-links li a::after {
  content: "";
  position: absolute;
  bottom: 0%;
  left: 0%;
  width: 0%;
  height: 1px;
  transition: all 0.2s ease-in-out;
}

.nav-links li a:hover:after {
  width: 100%;
}

.c-open-menu,
.c-close-menu {
  position: absolute;
  color: #000000;
  cursor: pointer;
  font-size: 1.5rem;
  display: none;
}

.c-open-menu {
  top: 35%;
  right: 1.25rem;
  transform: translateY(-50);
}

.c-close-menu {
  top: 2rem;
  right: 1.25rem;
}

.nav-icons i {
  padding-left: 1.25rem;
  font-size: 1.1rem;
  cursor: pointer;
}

#check {
  display: none;
}

.jacket-categories-main {
  position: absolute;
  top: 5rem;
  overflow: hidden;
  background-color: #fff;
  min-width: 13rem;
  max-height: 14rem;
  opacity: 0;
  visibility: hidden;
}

.jacket-categories-sub ul {
  display: flex;
  flex-direction: column;
}

.jacket-categories-sub ul li a {
  display: block;
  width: 100%;
}

.nav-links li:hover .jacket-categories-main {
  visibility: visible;
  transition: max-height 0.2s ease-in;
  opacity: 1;
}

.nav-login {
  color: #000000;
}

.jacket-links-mobile {
  display: none;
}

@media (width <850px) {
  .nav-links a {
    font-size: 1rem;
    font-family: "Poppins";
    font-weight: 500;
    color: #fff;
  }

  .jacket-links-mobile .c-summary-btn {
    display: flex;
    align-items: center;
    height: 3.6rem;
    transition: all 0.5s ease-in-out;

    &:hover {
      background-color: rgb(255, 255, 255);
      color: #000000;
      border-bottom: 0.7rem solid rgb(50, 50, 50);
      margin: auto;
    }
  }

  .nav-links {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding-bottom: 5rem;
    position: fixed;
    top: 0%;
    right: -100%;
    z-index: 100;
    background-color: #ffffff;
    transition: all 0.5s ease-in-out;
  }

  .nav-links li {
    transition: all 0.5s ease-in-out;
    display: flex;
    justify-content: center;
    width: 100%;
  }

  .nav-links li :hover {
    background-color: lightgray;
    display: flex;
    width: 100%;
  }

  .nav-links li .nav-item {
    padding: 1rem;
    color: rgb(0, 0, 0);
    width: 100%;
    transition: all 0.5s ease-in-out;
  }

  .nav-links li .nav-item:hover {
    color: #000000;
    border-bottom: 0.7rem solid rgb(45, 45, 45);
    margin: auto;
  }

  .c-open-menu,
  .c-close-menu {
    display: flex;
  }

  .c-close-menu i {
    color: white;
  }

  #check:checked ~ .nav-links {
    right: 0%;
  }

  .jacket-categories-main {
    position: absolute;
    top: 15rem;
    overflow: hidden;
    background-color: #fff;
    min-width: 13rem;
    max-height: 7rem;
    opacity: 0;
    visibility: hidden;
  }

  .jacket-categories-sub ul {
    display: flex;
    flex-direction: column;
  }

  .jacket-categories-sub ul li a {
    display: block;
    width: 100%;
    padding: 0.3rem 0.7rem;
  }

  .nav-links li:hover .jacket-categories-main {
    visibility: visible;
    transition: max-height 0.2s ease-in;
    opacity: 1;
  }

  .jacket-links-mobile {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  #jacket-links {
    display: none;
    background-color: rgb(26, 26, 26);
  }

  .jacket-links-mobile {
    display: flex;
    flex-direction: row;
    align-items: center;
    transition: all 0.5s ease-in-out;
    width: 100%;
  }

  .jacket-summary {
    display: flex;
    text-decoration: none;
    list-style-type: none;
    font-size: 1rem;
    font-family: "Poppins";
    font-weight: 500;
    color: #000000;
    text-transform: uppercase;
    transition: all 0.2s ease-in-out;
    justify-content: center;
    width: 100%;
    cursor: pointer;
    padding: 1rem;
  }

  .jacket-summary::-webkit-details-marker {
    display: none;
  }

  .jacket-links-mobile .jacket-summary:hover {
    background-color: lightgray;
    color: #000000;
    width: 100%;
    border-bottom: 0.7rem solid rgb(38, 38, 38);
    margin: auto;
  }
}

.nav-icons {
  display: flex;
}

@media (width<600px) {
  .desktop-nav {
    padding: 2rem 4rem 2rem 1.3rem;
  }
}
/*home-page*/
.home-img {
  background-image: url(/img/home-page-header.jpg);
  background-size: cover;
  width: 100%;
  background-repeat: no-repeat;
  position: relative;
  display: flex;
  justify-content: center;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
  display: flex;
  flex-direction: column;
  justify-content: start;
}

.title-text {
  width: 100%;
  padding: 30rem 0 2rem 3rem;
  color: white;
  font-family: "Sora";
  font-size: 2rem;

  @media (width>400px) {
    font-size: 3rem;
  }

  @media (width>820px) {
    width: 50rem;
  }
}

.shop-now-btn {
  padding-bottom: 3rem;
  padding-left: 3rem;
}
.cta {
  background-color: white;
  color: black;
  font-size: 1em;
  max-height: 46px;
  border-radius: 1rem;
  padding: 9px 20px;
  text-transform: uppercase;
  text-decoration: none;
}

/*HOME PAGE SECTION 2*/
.new-fall-collection-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: "Sora";
  padding-top: 1rem;
}

.new-fall-collection-p {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: "Sora";
  font-weight: 400;
  padding-left: 15rem;
  padding-right: 15rem;
}

.new-fall-collection-items {
  display: flex;
  justify-content: center;
  flex-direction: row;
  align-items: center;
  width: 100%;
  padding: 2rem 0rem;
  flex-wrap: wrap;
  gap: 1rem;
}

.item-container {
  display: flex;
  flex-direction: column;
  max-width: 400px;
  height: auto;
  padding-bottom: 1rem;
}

.img-container {
  display: flex;
  width: 100%;
}

.img-container {
  display: flex;
  max-height: 900px;
  width: auto;
}

.image {
  width: 100%;
  border-radius: 0.7rem;
}

.text-container {
  display: flex;
  flex-direction: column;
  padding-top: 1rem;
}
/* ... */

